--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -9,3 +9,6 @@ if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true")
     include(":ReactAndroid:hermes-engine")
     project(":ReactAndroid:hermes-engine").projectDir = file('../node_modules/react-native/ReactAndroid/hermes-engine')
 }
+
+include ':react-native-bridge'
+project(':react-native-bridge').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-ibm-mobilefirst/android/react-native-bridge')
